fix overlapping elements

--- a/src/features/projects/styles/ProjectsMap.module.scss
+++ b/src/features/projects/styles/ProjectsMap.module.scss
@@ -114,6 +114,7 @@
   position: fixed;
   right: 60px;
   top: 20px;
+  z-index: 9;
 }
 
 .projectSitesDropdown {
