--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -179,6 +179,7 @@ video {
 }
 
 #comparison-container {
+  margin-top: -100px;
   position: fixed;
   height: 100%;
 }
